@@ -1,3 +1,7 @@
+2011-02-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-07-13
+        * Allow for new treatment of Et overflow.
+
 2011-01-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-07-12
         * Updates for MissingEtSig.
